--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,7 @@
 
 }
 .SAEB{
-background-color: #7FFFD4;
+background-color: #8cff7d9d;
+opacity: 0,3;
+font-family: "Lucida Console", "Courier New", monospace;
 }
